# CIS25

./: .gitignore  LICENSE  README.md
Class Activities/: README.md
Class Activities/address structure/: README.md  main.cpp
Class Activities/age classifier/: README.md
Class Activities/card-picker/: card-picker.sln  card-picker.vcxproj  main.cpp  readme.md
Class Activities/decision making/: README.md
Class Activities/loops/: README.md
Class Activities/movie structure/: main.cpp  readme.md
Class Activities/variable swapper/: swapper.cpp
Homework/RAII demo/: CMakeLists.txt
Homework/currency converter/: README.md  currency converter.sln  currency converter.vcxproj  main.cpp
Homework/table printer/: Customer.cpp  Customer.h  README.md  main.cpp  table printer.sln  table printer.vcxproj  (+1 more)
Projects/hangman/: CMakeLists.txt  README.md  Secret.cpp  Secret.h  hangman.sln  hangman.vcxproj  hangman.vcxproj.filters  main.cpp  peer_review.md  wordlist.txt
Projects/hangman/Utility/: hangman_utils.cpp  hangman_utils.h  text_utils.cpp  text_utils.h
Projects/hangman/src/: hangman_utils.cpp
Projects/hangman/test/: hangman_tests.cpp  new_hangman_tests.cpp
Projects/sam-i-am/: CMakeLists.txt  README.md  main.cpp  scenario_maker.cpp
Projects/sam-i-am/include/: Actor.h  Battery.h  City.h  Game.h  MovingActor.h  StaticActor.h  sam_io.h  sam_types.h  sam_utils.h  scanner.h
Projects/sam-i-am/scenarios/: README.md
Projects/sam-i-am/src/: Actor.cpp  Game.cpp  MovingActor.cpp  StaticActor.cpp  sam_io.cpp  sam_utils.cpp  scanner.cpp
Projects/sam-i-am/test/: sam_tests.cpp
Projects/sam-i-am/utils/: Actor.cpp  Actor.h  FlyingActor.cpp  FlyingActor.h  FlyingObject.cpp  FlyingObject.h  Game.cpp  Game.h  sam_types.h  sam_utils.cpp  sam_utils.h  scanner.cpp
grade eval/: grade eval.sln  main.cpp
(+45 files in other folders)
